log/build_2023-01-07_00-58-56/project_2/stderr.log
package init file 'project_2/__init__.py' not found (or not a regular file)
  File "/home/jetson/Desktop/workspace_2/install/project_2/lib/python3.8/site-packages/project_2/imu_reader.py", line 37
    continue
    ^
SyntaxError: 'continue' not properly in loop

